flask-application/k8s_manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-flask-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: http://auth.local.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://auth.local.com/oauth2/auth
spec:
  rules:
  - host: local.com
    http:
      paths:
      - path: /app1
        backend:
          serviceName: sample-flask-app
          servicePort: 5678
